[gd_scene load_steps=3 format=3 uid="uid://nv1acxtkb31o"]

[ext_resource type="Script" uid="uid://deh51tqwfqtow" path="res://source/menus/menu_widgets/loading_animation.gd" id="1_tilqk"]
[ext_resource type="Texture2D" uid="uid://2u2buc3l3qco" path="res://assets/sprites/ui/icons/circle.png" id="2_0o0n3"]

[node name="LoadingAnimation" type="Control"]
custom_minimum_size = Vector2(187.5, 187.5)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_tilqk")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect8" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect9" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect10" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect11" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect12" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.75
offset_top = -15.0
offset_right = 108.75
offset_bottom = 15.0
pivot_offset = Vector2(15, 15)
texture = ExtResource("2_0o0n3")
expand_mode = 3
stretch_mode = 5
